scroll overflow fix

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -4,9 +4,11 @@
   justify-content: space-between;
   padding: 15px 20px;
   background: #fff;
-  width: 100%;
+  width: 100vw;
+  max-width: 100%;
   box-sizing: border-box;
-  position: relative;
+  position: fixed;
+  z-index: 1000;
 }
 
 .navbar::after {
@@ -14,7 +16,8 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100vw;
+  right: 0;
+  width: 100%;
   height: 1px;
   background: #ddd;
 }
